Fixed overflow issue on main

--- a/incs/css/main.css
+++ b/incs/css/main.css
@@ -18,6 +18,7 @@ body {
     letter-spacing: 3px;
     font-size: 0.6rem;
     text-align: center;
+    align-items: stretch;
     
 }
 
@@ -42,14 +43,17 @@ body {
     box-shadow: inset 0 0 30px 15px rgba(0, 0, 0, 0.7);
     padding-top: 20px;
     gap: 10px;
-    height: 100%;
+    /* min-height: 100%; */
     width: 90%;
     grid-template-columns: repeat(auto-fill, 160px);
     /* grid-template-rows: repeat(auto-fill, 25%); */
     justify-content: center;
     align-content: center;
     align-items: center;
+    overflow: auto;
 }
+
+
 
 
 /* pokecards */
@@ -330,6 +334,7 @@ background: radial-gradient(ellipse at bottom left, #a60000  26%, #ffdede 120%);
 #game-info {
   /* height: 100%; */
   width: 25%;
+  /* min-height: 100%; */
   background:  #8C8897;
   display: flex;
   flex-direction: column;
